# delivery-project

./: .env  .env.example  .gitignore  Dockerfile  POSTMAN_COLLECTION.json  README.txt  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
apps/auth/: views.py
apps/deliveries/: choices.py  models.py  serializers.py  urls.py  views.py
apps/deliveries/migrations/: 0001_initial.py  0002_alter_deliverymodel_status.py  0002_initial.py  0003_alter_itemmodel_table.py  0004_remove_deliverymodel_reciever_deliverymodel_receiver_and_more.py  0005_deliverymodel_department_alter_deliverymodel_status.py
apps/departments/: models.py  serializers.py  urls.py  views.py
apps/departments/migrations/: 0001_initial.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/apps/auth/: urls.py  views.py
backend/apps/deliveries/: choices.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/departments/: choices.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/stats/: serializers.py  urls.py  views.py
backend/apps/users/: filters.py  managers.py  models.py  (+3 more)
backend/configs/: celery.py  settings.py  urls.py
backend/core/: pagination.py  permissions.py
backend/templates/: change_email.html  recover_password.html  register.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_configs/: __init__.py  rest_config.py  simplejwt_config.py
core/: pagination.py
core/dataclasses/: delivery_dataclass.py  department_dataclass.py  item_dataclass.py  user_dataclass.py
core/enums/: action_token_enum.py
core/services/: tracking_service.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: router.tsx
(+216 files in other folders)
