[tool.poetry]
name = "delivery-project"
version = "0.1.0"
description = ""
authors = ["regvud <silveron.regvud@gmail.com>"]
readme = "README.md"
packages = [{include = "delivery_project"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
django-dotenv = "^1.4.2"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.3.1"
redis = "^5.0.1"
celery = "^5.3.6"
django-celery-results = "^2.5.1"
channels-redis = "^4.1.0"
flower = "^2.0.1"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
